axum-myroutes/tests/ui/fail_route_missing_attr.stderr
error: enum variant missing route attribute
  --> tests/ui/fail_route_missing_attr.rs:13:5
   |
13 |     Index,
   |     ^^^^^

error[E0425]: cannot find type `Route` in this scope
  --> tests/ui/fail_route_missing_attr.rs:10:10
   |
10 | #[derive(Clone)]
   |          ^^^^^ not found in this scope
   |
help: consider importing this struct
   |
 4 + use axum::routing::Route;
   |

error[E0433]: failed to resolve: use of undeclared type `Route`
  --> tests/ui/fail_route_missing_attr.rs:10:10
   |
10 | #[derive(Clone)]
   |          ^^^^^ use of undeclared type `Route`
   |
help: consider importing this struct
   |
 4 + use axum::routing::Route;
   |
